Successfully listing all the hats the admin has created

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item text-black" href="/admin/hats/add">Add Product</a></li>
+                                <li><a class="dropdown-item text-black" href="/admin/hats/list">View All Products</a></li>
+
                             </ul>
                         </li>
                     </ul>
