--- a/Pages/Admin/Hats/List.cshtml
+++ b/Pages/Admin/Hats/List.cshtml
@@ -13,6 +13,8 @@
             <th scope="col">Quantity</th>
             <th scope="col">Price</th>
             <th scope="col">Date</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody class="table-group-divider">
@@ -23,6 +25,8 @@
                 <td>@hat.Quantity</td>
                 <td>@hat.Price</td>
                 <td>@hat.PublishedDate</td>
+                <td><a href="/Admin/Hats/Edit/@hat.Id">Edit</a></td>
+                <td><a asp-page="list" asp-page-handler="delete" asp-route-id="@hat.Id">Delete</a></td>
             </tr>
         }
     </tbody>
