--- a/Pages/Admin/Hats/List.cshtml
+++ b/Pages/Admin/Hats/List.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
     <h1 class="mb-5">All Hats</h1>
 </div>
-
+@if(Model.Hats!=null){
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -31,3 +31,8 @@
         }
     </tbody>
 </table>
+}else{
+    <div class="container">
+        No Hats Found!
+    </div>
+}
