If statement for checking if there was a hat found in db changed

--- a/Pages/Admin/Hats/List.cshtml
+++ b/Pages/Admin/Hats/List.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
     <h1 class="mb-5">All Hats</h1>
 </div>
-@if(Model.Hats!=null){
+@if(Model.Hats!=null && Model.Hats.Any()){
 <table class="table table-striped table-hover">
     <thead>
         <tr>
