--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,55 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    @foreach(var hat in Model.Hats)
+    {
+        @if (hat.Visible.Equals(true))
+        {
+            <div class="col-md-4 col-xs-6 border-primary mb-3">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-12">
+                            <div class="card-header text-white" style="background-color:dimgray">
+                                <p class="card-text">
+                                    <h5 class="card-title">
+                                        @hat.Name.Substring(0,Math.Min(hat.Name.Length,15))
+                                        <a class="text-white float-right" asp-action="Edit" asp-route-id="@hat.Id"><i class="bi bi-pencil-square"></i></a>
+                                    </h5>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex justify-content-center align-items-center">
+                            <div class="flex-shrink-0 ">
+                            <img src="@hat.FeaturedImageUrl" width="100" alt="@hat.Name">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card-body">
+                                <p class="card-text"><b>Color: </b>@hat.Color</p>
+                                <p class="card-text"><b>Brand: </b>@hat.Brand.Substring(0,Math.Min(hat.Brand.Length,6))</p>
+                                <p class="card-text"><b>Size: </b>@hat.Size</p>
+                        </div>
+                    </div>
+                        <div class="col-md-12 ">
+                            <div class="card-footer">
+                                <div class="d-grid gap-2 mx-auto ">
+                                    <a class="btn btn-outline-primary btn-block" 
+                                    asp-page="./Product/Details"
+                                    asp-page-handler="details"
+                                    asp-route-id="@hat.Id">
+                                        Show Details
+                                    </a>
+                                    <a class="btn btn-success btn-block text-white @((hat.InStock) ?  "": "disabled")"
+                                    asp-route-id="@hat.Id">
+                                    <i class="bi bi-cart-plus"></i> Add to Cart (Price @hat.Price.ToString("c"))
+                                    </a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        }
+    }
 </div>
