Pagination of the shopping list and additional methods in the repository.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -56,3 +56,15 @@
         }
     }
 </div>
+
+@{
+    var prevDisabled = Model.Hats.HasPreviousPage ? "" : "disabled";
+    var nextDisabled = Model.Hats.HasNextPage ? "" : "disabled";
+}
+
+<a asp-page="./Index"
+   asp-route-pageIndex="@(Model.Hats.PageIndex - 1)"
+   class="btn btn-primary @prevDisabled">Previous</a>
+<a asp-page="./Index"
+   asp-route-pageIndex="@(Model.Hats.PageIndex + 1)"
+   class="btn btn-primary @nextDisabled">Next</a>
