--- a/Pages/Product/Details.cshtml
+++ b/Pages/Product/Details.cshtml
@@ -51,8 +51,8 @@
                 <div class="col-md-12">
                     <div class=" card-footer d-flex justify-content-evenly">
                         <p class="card-text">
-                            <a class="btn btn-outline-primary float-right" asp-action="Index">
-                                Back to List
+                            <a class="btn btn-outline-primary float-right" asp-page="@Request.Headers.Referer">
+                                < Back to List
                             </a>
                             <a class="btn btn-success text-white justify-content-end  @((Model.Hat.InStock) ? "" : "disabled")"
                                asp-route-id="@Model.Hat.Id"><i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Hat.Price.ToString("c"))</a>
