--- a/Pages/Product/Details.cshtml
+++ b/Pages/Product/Details.cshtml
@@ -51,7 +51,7 @@
                 <div class="col-md-12">
                     <div class=" card-footer d-flex justify-content-evenly">
                         <p class="card-text">
-                            <a class="btn btn-outline-primary float-right" asp-page="@Request.Headers.Referer">
+                            <a class="btn btn-outline-primary float-right" href="@Request.Headers.Referer">
                                 < Back to List
                             </a>
                             <a class="btn btn-success text-white justify-content-end  @((Model.Hat.InStock) ? "" : "disabled")"
