--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="container mb-3 navbar collapse d-sm-inline-flex justify-content-between">
+<div class="container mb-3 navbar multi-collapse d-sm-inline-flex justify-content-between">
     <div class="d-flex justify-content-start">
         <div class="m-1">
         <form class="d-flex" role="search">
@@ -52,7 +52,7 @@
      </select>
     </div>
     <div class="m-1">
-         <a class="btn btn-outline-secondary" href="#" role="button" aria-expanded="false">Show Only In Stock</a>
+         <a class="btn btn-outline-secondary text-truncate" href="#" role="button" aria-expanded="false">Show Only In Stock</a>
     </div>
     </div>
 </div>
