--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,10 +8,18 @@
 <div class="container mb-3 navbar multi-collapse d-sm-inline-flex justify-content-between">
     <div class="d-flex justify-content-start">
         <div class="m-1">
-            <form class="d-flex" asp-action="Index" method="get" role="search">
+            <form class="d-flex" method="get" role="search">
                 <input class="form-control me-2" type="search" name="searchString" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success"  type="submit">Search</button>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+                
         </form>
+
+        </div>
+
+        <div class="m-1">
+            <form method="get" role="search">
+            <button class="btn btn-outline-primary" formmethod="get" name="clear" value="clear" type="submit">Clear Search</button>
+            </form>
         </div>
     </div>
 
