--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     
                     <ul class="navbar-nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index"><i class="fw-bolder">Cart</i></a>
+                            <a class="nav-link text-dark" asp-page="./Cart/ShoppingCart"><i class="fw-bolder">Cart</i></a>
 
                         </li>
                         <partial name="_LoginPartial" />
